fixed weird gap b/w mentorship

--- a/components/Programs/Programs.module.scss
+++ b/components/Programs/Programs.module.scss
@@ -5,29 +5,32 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    margin:0;
   
     width: 100%;
-    padding: 10px 0;
   
     background-color: $white;
   
     font-family: $secondary-header-font;
     font-size: $body-font-size;
     color: $raisin-dark;
+}
 
-    h2 {
-        font-family: $secondary-header-font;
-        font-size: $secondary-header-font-size;
-        text-align: center;
-        margin: 0;
-    }
-    
-    p {
-        font-family: $body-font;
-        font-size: $body-font-size;
-        text-align: center;
-        margin: 0
-    }
+
+.Program.h2 {
+    font-family: $secondary-header-font;
+    font-size: $secondary-header-font-size;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
+
+.Program.p {
+    font-family: $body-font;
+    font-size: $body-font-size;
+    text-align: center;
+    padding: 0;
+    margin: 0;
 }
 
 .Programs {
@@ -43,7 +46,8 @@
     flex-direction: column;
     align-items: center;
     width: 200px;
-    padding: 40px;
+    padding: 0 20px;
+    margin: 0;
     text-align: center;
 }
 
